--- a/public/css/style.css
+++ b/public/css/style.css
@@ -74,16 +74,24 @@ body{
     }
 }
 
-@media (max-width: 530px) {
+@media (max-width: 490px) {
+    .urlInputBox, .submitBtn {
+        height: 28px;
+        font-size: 10pt;
+        margin: 8px;
+    }
+}
+
+/* @media (max-width: 530px) {
     .urlInputBox, .submitBtn {
         height: 24px;
         font-size: 7pt;
     }
-}
+} */
 
-@media (max-width: 430px) {
+/* @media (max-width: 430px) {
     .urlInputBox, .submitBtn {
-        height: 20px;
-        font-size: 5pt;
+        height: 24px;
+        font-size: 6pt;
     }
-}
+} */
