--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EJS</title>
-    <link rel="stylesheet" href="css/result.css">
+    <link rel="stylesheet" href="/css/result.css">
     <!-- Using EJS in a Script Tag -->
     <script src="ejs.js"></script>
 </head>
